# casamecate-fullstack-challenge

./: .env.example  .gitignore  README.md  compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_04_30_1856-8d603b13adb3_initial_schema.py  2026_04_30_1918-091312a4356e_seed_initial_data.py  2026_05_01_1635-40747a0fa343_add_extended_flights_demo_data.py
backend/app/: main.py
backend/app/core/: config.py  database.py
backend/app/flights/: models.py  router.py  schemas.py  service.py
backend/app/stackoverflow/: client.py  dependencies.py  router.py  schemas.py  service.py
frontend/: .dockerignore  Dockerfile  openapi-ts.config.ts  package-lock.json  package.json
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/components/charts/: bar-chart.tsx  bar-value-labels.tsx  bar-y-axis.tsx  bar.tsx  line-chart.tsx  line.tsx  x-axis.tsx
frontend/components/charts/tooltip/: date-ticker.tsx  (+2 more)
frontend/components/motion/: animated-number.tsx  fade-in.tsx
frontend/components/sections/: flights-section.tsx  stackoverflow-section.tsx
frontend/components/site/: header.tsx  view-switcher.tsx
frontend/components/ui/: card.tsx  empty-state.tsx  kpi-card.tsx  morph-button.tsx  section-header.tsx  segmented-control.tsx  skeleton.tsx
frontend/lib/api/: flights-actions.ts  flights-filters.ts  flights.ts  index.ts  runtime-config.ts  stackoverflow.ts
frontend/lib/motion/: config.ts  index.ts  provider.tsx  variants.ts
frontend/providers/: root-providers.tsx
(+11 files in other folders)
